content/v8.x/el-GR/doc/api/addons.md
# Πρόσθετα C++

<!--introduced_in=v0.10.0-->

Τα πρόσθετα της Node.js είναι δυναμικά συνδεδεμένα κοινόχρηστα αντικείμενα, γραμμένα σε C++, που μπορούν να φορτωθούν στη Node.js χρησιμοποιώντας την συνάρτηση [`require()`](modules.html#modules_require), και να χρησιμοποιούνται σαν κανονικές ενότητες της Node.js. Χρησιμοποιούνται κυρίως για την παροχή μιας διεπαφής μεταξύ της javaScript που τρέχει στη Node.js και των βιβλιοθηκών της C/C++.

Αυτή τη στιγμή, η μέθοδος για τη δημιουργία Πρόσθετων είναι κάπως περίπλοκη, αφού απαιτεί τη γνώση διαφόρων στοιχείων και API :

 - V8: η βιβλιοθήκη C++ που χρησιμοποιεί προς το παρόν η Node.js για να παρέχει την υλοποίηση της Javascript. Η V8 παρέχει τους μηχανισμούς για τη δημιουργία αντικειμένων, την κλήση συναρτήσεων, κλπ. Το API της βιβλιοθήκης V8's τεκμηριώνεται κατά κύριο λόγο στο αρχείο κεφαλίδας `v8.h` (`deps/v8/include/v8.h` στο δέντρο του πηγαίου κώδικα της Node.js), ενώ είναι επίσης διαθέσιμη και [διαδικτυακά](https://v8docs.nodesource.com/).

 - [libuv](https://github.com/libuv/libuv): Η βιβλιοθήκη C που υλοποιεί τον βρόχο συμβάντων της Node.js, τα νήματα εργασίας και όλες τις ασύγχρονες συμπεριφορές της πλατφόρμας. Επίσης, χρησιμοποιείται σαν μια cross-platform αφαιρετική βιβλιοθήκη που επιτρέπει την εύκολη, σαν POSIX, πρόσβαση σε όλα τα κύρια λειτουργικά συστήματα σε διάφορες κοινές εργασίες συστήματος, όπως η διασύνδεση με το σύστημα αρχείων, τα socket, τα χρονόμετρα και τα συμβάντα συστήματος. Η libuv επίσης παρέχει ένα σύστημα παρόμοιο με το pthreads για την αφαίρεση νημάτων, που μπορεί να επιτρέψει την χρήση πιο εξεζητημένων ασύγχρονων Πρόσθετων, τα οποία ξεφεύγουν από τον βασικό βρόχο συμβάντων. Οι δημιουργοί των πρόσθετων ενθαρρύνονται να σκεφτούν πως θα αποφύγουν την αναμονή του βρόχου συμβάντων όταν χρησιμοποιούνται εργασίες I/O ή άλλες εργασίες που απαιτούν χρόνο, μεταθέτοντας την εργασία στο λειτουργικό σύστημα, σε νήματα εργασίας ή σε προσαρμοσμένα νήματα libuv.

 - Εσωτερικές βιβλιοθήκες Node.js. Η Node.js συμπεριλαμβάνει μια σειρά από C++ API, που μπορούν να χρησιμοποιηθούν από τα Πρόσθετα &mdash; εκ των οποίων η πιο σημαντική είναι η κλάση `node::ObjectWrap`.

 - Η Node.js συμπεριλαμβάνει μια σειρά από άλλες βιβλιοθήκες, που συνδέονται στατικά, όπως η βιβλιοθήκη OpenSSL. Αυτές οι βιβλιοθήκες βρίσκονται στον φάκελο `deps/` στο δέντρο του πηγαίου κώδικα της Node.js. Μόνο τα σύμβολα των βιβλιοθηκών libuv, OpenSSL, V8 και zlib επανεξάγονται σκόπιμα από την Node.js και μπορούν να χρησιμοποιηθούν ποικιλοτρόπως από τα Πρόσθετα. Δείτε το κεφάλαιο [Σύνδεση με τις εξαρτήσεις της Node.js](#addons_linking_to_node_js_own_dependencies) για περισσότερες πληροφορίες.

Όλα τα παρακάτω παραδείγματα είναι διαθέσιμα για [λήψη](https://github.com/nodejs/node-addon-examples) και μπορούν να χρησιμοποιηθούν ως βάση για ένα Πρόσθετο.

## Hello world

Αυτό το παράδειγμα "Hello world" είναι ένα πολύ απλό Πρόσθετο, γραμμένο σε C++, το οποίο είναι ισοδύναμο με τον παρακάτω κώδικα JavaScript:

```js
module.exports.hello = () => 'world';
```

Αρχικά, δημιουργήστε το αρχείο `hello.cc`:

```cpp
// hello.cc
#include <node.h>

namespace demo {

using v8::FunctionCallbackInfo;
using v8::Isolate;
using v8::Local;
using v8::Object;
using v8::String;
using v8::Value;

void Method(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();
  args.GetReturnValue().Set(String::NewFromUtf8(isolate, "world"));
}

void init(Local<Object> exports) {
  NODE_SET_METHOD(exports, "hello", Method);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, init)

}  // namespace demo
```

Σημειώστε ότι όλα τα Πρόσθετα της Node.js πρέπει να εξάγουν μια συνάρτηση αρχικοποίησης, χρησιμοποιώντας το παρακάτω πρότυπο:

```cpp
void Initialize(Local<Object> exports);
NODE_MODULE(NODE_GYP_MODULE_NAME, Initialize)
```

Δεν υπάρχει ερωτηματικό μετά το `NODE_MODULE` καθώς δεν είναι συνάρτηση (δείτε το `node.h`).

The `module_name` must match the filename of the final binary (excluding the .node suffix).

Τότε, στο παράδειγμα `hello.cc`, η συνάρτηση αρχικοποίησης είναι η `init` και το όνομα της Πρόσθετης ενότητας είναι `addon`.

### Χτίσιμο

Όταν η γραφή του πηγαίου κώδικα έχει ολοκληρωθεί, θα πρέπει να μεταγλωττιστεί στο αρχείο `addon.node`. Για να γίνει η μεταγλώττιση, δημιουργήστε ένα αρχείο με όνομα `binding.gyp` μέσα στον κύριο φάκελο του project, που περιγράφει την διαμόρφωση του χτισίματος του πρόσθετου, σε μορφή παρόμοια με JSON. Το αρχείο αυτό χρησιμοποιείται από το [node-gyp](https://github.com/nodejs/node-gyp) — ένα εργαλείο που έχει δημιουργηθεί ειδικά για τη μεταγλώττιση Πρόσθετων για την Node.js.

```json
{
  "targets": [
    {
      "target_name": "addon",
      "sources": [ "hello.cc" ]
    }
  ]
}
```

*Note*: A version of the `node-gyp` utility is bundled and distributed with Node.js as part of `npm`. Αυτή η έκδοση δεν είναι άμεσα διαθέσιμη για χρήση από τους προγραμματιστές, αλλά προορίζεται για να υποστηρίξει την δυνατότητα μεταγλώττισης και εγκατάστασης Πρόσθετων μέσω της εντολής `npm install`. Οι προγραμματιστές που θέλουν να χρησιμοποιήσουν το εργαλείο `node-gyp`, μπορούν να το εγκαταστήσουν χρησιμοποιώντας την εντολή `npm install -g node-gyp`. Δείτε τις [οδηγίες εγκατάστασης](https://github.com/nodejs/node-gyp#installation) του `node-gyp` για περισσότερες πληροφορίες, συμπεριλαμβανομένων των απαιτήσεων ανά πλατφόρμα.

Αφού δημιουργηθεί το αρχείο `binding.gyp`, χρησιμοποιήστε την εντολή `node-gyp configure` για να δημιουργήσετε τα κατάλληλα αρχεία χτισίματος για την τρέχουσα πλατφόρμα. Η εκτέλεση της εντολής θα δημιουργήσει είτε ένα αρχείο `Makefile` (σε συστήματα Unix) ή ένα αρχείο`vcxproj` (σε συστήματα Windows) στον φάκελο `build/`.

Στη συνέχεια, εκτελέστε την εντολή `node-gyp build` για να δημιουργήσετε το μεταγλωττισμένο αρχείο `addon.node`. Το αρχείο θα τοποθετηθεί μέσα στον φάκελο `build/Release/`.

Όταν χρησιμοποιείτε την εντολή `npm install` για να εγκαταστήσετε ένα πρόσθετο για τη Node.js, το npm χρησιμοποιεί την δική του -ενσωματωμένη- έκδοση της `node-gyp` για να εκτελέσει την ίδια σειρά ενεργειών, δημιουργώντας μια μεταγλωττισμένη έκδοση του Πρόσθετου για την πλατφόρμα του χρήστη, όπως απαιτείται.

Μόλις χτιστεί, το Πρόσθετο μπορεί να χρησιμοποιηθεί εντός της Node.js χρησιμοποιώντας την συνάρτηση [`require()`](modules.html#modules_require) δείχνοντας το μεταγλωττισμένο αρχείο `addon.node` του πρόσθετου:

```js
// hello.js
const addon = require('./build/Release/addon');

console.log(addon.hello());
// Τυπώνει: 'world'
```

Για περισσότερες πληροφορίες, δείτε τα παρακάτω παραδείγματα, ή δείτε το <https://github.com/arturadib/node-qt> για ένα παράδειγμα σε χρήση.

Επειδή το ακριβές μονοπάτι προς το μεταγλωττισμένο Πρόσθετο αλλάζει ανάλογα με τον τρόπο μεταγλώττισης (για παράδειγμα, κάποιες φορές βρίσκεται στον φάκελο `./build/Debug/`), τα Πρόσθετα μπορούν να χρησιμοποιούν το πακέτο [bindings](https://github.com/TooTallNate/node-bindings) για να φορτώνουν τη μεταγλωττισμένη ενότητα.

Σημειώστε ότι, παρόλο που η υλοποίηση του πακέτου `bindings` είναι πιο εξελιγμένη στο πως εντοπίζει τις Πρόσθετες ενότητες, ουσιαστικά πρόκειται για ένα μοτίβο try-catch παρόμοιο με το παρακάτω:

```js
try {
  return require('./build/Release/addon.node');
} catch (err) {
  return require('./build/Debug/addon.node');
}
```

### Σύνδεση με τις εξαρτήσεις της Node.js

H Node.js χρησιμοποιεί μια πληθώρα στατικά συνδεδεμένων βιβλιοθηκών, όπως οι: V8, libuv και OpenSSL. Όλα τα Πρόσθετα πρέπει να συνδέονται με την βιβλιοθήκη V8 και μπορούν να συνδέονται σε οποιαδήποτε άλλη βιβλιοθήκη, όπως απαιτείται. Συνήθως, αυτό είναι τόσο απλό όσο η χρήση μιας κατάλληλης δήλωσης `#include <...>` (π.χ. `#include <v8.h>`) και το εργαλείο `node-gyp` θα εντοπίσει τις κατάλληλες κεφαλίδες αυτόματα. Ωστόσο, υπάρχουν κάποιες επιφυλάξεις που θα πρέπει να έχετε κατά νου:

* Όταν εκτελείται το εργαλείο `node-gyp`, θα εντοπίσει την συγκεκριμένη έκδοση της Node.js και είτε θα ανακτήσει όλο τον πηγαίο κώδικα, ή μόνο τις κεφαλίδες. Αν ανακτηθεί ο πλήρης πηγαίος κώδικας, τα Πρόσθετα θα έχουν πλήρη πρόσβαση σε όλο το σετ εξαρτήσεων της Node.js. Ωστόσο, αν ανακτηθούν μόνο οι κεφαλίδες της Node.js, τότε μόνο τα σύμβολα που εξάγονται από την Node.js θα είναι διαθέσιμα.

* Το εργαλείο `node-gyp` μπορεί να τρέξει χρησιμοποιώντας την επιλογή `--nodedir`, δείχνοντας σε ένα τοπικό αντίγραφο του κώδικα της Node.js. Χρησιμοποιώντας αυτή την επιλογή, το Πρόσθετο θα έχει πλήρη πρόσβαση σε όλο το σετ των εξαρτήσεων.

### Φόρτωση Προσθέτων με τη χρήση της require()

Η επέκταση του ονόματος ενός μεταγλωττισμένου Πρόσθετου είναι `.node` (και όχι `.dll` ή `.so`). Η συνάρτηση [`require()`](modules.html#modules_require) είναι φτιαγμένη να ψάχνει για αρχεία με την επέκταση `.node` και να τα αρχικοποιεί ως δυναμικά συνδεδεμένες βιβλιοθήκες.

Κατά την κλήση της συνάρτησης [`require()`](modules.html#modules_require), συνήθως μπορεί να παραλειφθεί η επέκταση `.node` και η Node.js θα βρει και θα αρχικοποιήσει το Πρόσθετο. Ωστόσο, αυτό θα πρέπει να χρησιμοποιείται με επιφύλαξη, καθώς η Node.js θα βρει και θα φορτώσει ενότητες ή αρχεία JavaScript που τυχαίνει να έχουν το ίδιο όνομα. Για παράδειγμα, αν υπάρχει ένα αρχείο `addon.js` στον ίδιο φάκελο με το αρχείο `addon.node`,τότε η συνάρτηση [`require('addon')`](modules.html#modules_require) θα δώσει will give προτεραιότητα στο αρχείο `addon.js` και θα φορτώσει αυτό.

## Native Abstractions for Node.js

Όλα τα παραδείγματα που εμφανίζονται σε αυτό το έγγραφο, κάνουν άμεση χρήση των API της Node.js και της V8 για την υλοποίηση Πρόσθετων. Είναι σημαντικό να καταλάβουμε ότι το API της V8 μπορεί, και έχει αλλάξει δραματικά από μια έκδοση της, στην επόμενη (και από μια μείζονα έκδοση της Node.js στην επόμενη). Με κάθε αλλαγή, τα Πρόσθετα θα πρέπει να ενημερωθούν και να επαναμεταγλωττιστούν για να μπορούν να λειτουργήσουν. Το σχέδιο εκδόσεων της Node.js σχεδιάζεται με τρόπο που θα ελαχιστοποιήσει την συχνότητα και τις επιπτώσεις αυτών των αλλαγών, αλλά αυτό δε μπορεί να εγγυηθεί και για τα API της V8.

Η βιβλιοθήκη [Native Abstractions for Node.js](https://github.com/nodejs/nan) (ή `nan`) παρέχει μια σειρά εργαλείων που προτείνεται να χρησιμοποιούν οι προγραμματιστές Πρόσθετων, για την διατήρηση συμβατότητας μεταξύ παλαιών και μελλοντικών εκδόσεων της V8 και της Node.js. Δείτε τα [παραδείγματα](https://github.com/nodejs/nan/tree/master/examples/) της βιβλιοθήκης `nan` για μια επεξήγηση του πως μπορεί να χρησιμοποιηθεί.


## N-API

> Σταθερότητα: 1 - Πειραματικό

Το N-API είναι ένα API για δημιουργία native Πρόσθετων. Είναι ανεξάρτητο από την υποκείμενη μηχανή JavaScript (π.χ. V8) και συντηρείται από την ίδια την Node.js. Αυτό το API θα είναι ένα σταθερό Application Binary Interface (ABI) μεταξύ των εκδόσεων της Node.js. Προορίζεται για την απομόνωση των Πρόσθετων από αλλαγές στην υποκείμενη μηχανή JavaScript και επιτρέπει τις ενότητες που έχουν μεταγλωττιστεί σε μια έκδοση της Node.js, να τρέχουν και στις μελλοντικές εκδόσεις χωρίς να επαναμεταγλωττιστούν. Τα πρόσθετα χτίζονται και γίνονται πακέτο, χρησιμοποιώντας την ίδια προσέγγιση και τα ίδια εργαλεία, που περιγράφονται σε αυτό το έγγραφο (node-gyp, κλπ). Η μόνη διαφορά είναι το σύνολο των API που χρησιμοποιούνται από τον native κώδικα. Αντί να χρησιμοποιηθεί το API της V8 ή του [Native Abstractions for Node.js](https://github.com/nodejs/nan), χρησιμοποιούνται οι συναρτήσεις που είναι διαθέσιμες στο N-API.

Για να χρησιμοποιήσετε το N-API στο παράδειγμα "Hello world" που είδαμε πριν, αντικαταστήστε το περιεχόμενο του αρχείου `hello.cc` με τον παρακάτω κώδικα. Οι υπόλοιπες οδηγίες παραμένουν ίδιες.

```cpp
// hello.cc με χρήση του N-API
#include <node_api.h>

namespace demo {

napi_value Method(napi_env env, napi_callback_info args) {
  napi_value greeting;
  napi_status status;

  status = napi_create_string_utf8(env, "hello", NAPI_AUTO_LENGTH, &greeting);
  if (status != napi_ok) return nullptr;
  return greeting;
}

napi_value init(napi_env env, napi_value exports) {
  napi_status status;
  napi_value fn;

  status = napi_create_function(env, nullptr, 0, Method, nullptr, &fn);
  if (status != napi_ok) return nullptr;

  status = napi_set_named_property(env, exports, "hello", fn);
  if (status != napi_ok) return nullptr;
  return exports;
}

NAPI_MODULE(NODE_GYP_MODULE_NAME, init)

}  // namespace demo
```

Οι συναρτήσεις που είναι διαθέσιμες και ο τρόπος χρήσης τους, τεκμηριώνονται στην ενότητα [Πρόσθετα C/C++ - N-API](n-api.html).

## Παραδείγματα Πρόσθετων

Ακολουθούν κάποια παραδείγματα Πρόσθετων, που προορίζονται ως βοήθεια στους προγραμματιστές που θέλουν να ξεκινήσουν να φτιάξουν Πρόσθετα. Τα παραδείγματα χρησιμοποιούν το API της V8. Ανατρέξτε στις [πληροφορίες της V8](https://v8docs.nodesource.com/) για βοήθεια με διάφορες κλήσεις της V*, και στο [Οδηγό Ενσωμάτωσης](https://github.com/v8/v8/wiki/Embedder's%20Guide) της V8 για επεξήγηση διαφόρων εννοιών που χρησιμοποιούνται, όπως για παράδειγμα: χειριστές, scope (πεδία εφαρμογής), συναρτήσεις, πρότυπα, κλπ.

Όλα τα παραδείγματα χρησιμοποιούν το παρακάτω αρχείο `binding.gyp`:

```json
{
  "targets": [
    {
      "target_name": "addon",
      "sources": [ "addon.cc" ]
    }
  ]
}
```

Σε περιπτώσεις που υπάρχουν περισσότερα από ένα αρχεία `.cc`, απλά προσθέστε τα επιπλέον ονόματα αρχείων στον πίνακα `sources`. For example:

```json
"sources": ["addon.cc", "myexample.cc"]
```

Όταν το αρχείο `binding.gyp` είναι έτοιμο, τα παραδείγματα Πρόσθετων μπορούν να ρυθμιστούν και να μεταγλωττιστούν με την χρήση του `node-gyp`:

```console
$ node-gyp configure build
```


### Παράμετροι συναρτήσεων

Τα Πρόσθετα συνήθως εκθέτουν αντικείμενα και συναρτήσεις που μπορούν να χρησιμοποιηθούν από την JavaScript που τρέχει εντός της Node.js. Όταν οι συναρτήσεις καλούνται από την JavaScript, οι παράμετροι εισόδου και η τιμή επιστροφής πρέπει να δεθούν από και προς τον κώδικα C/C++.

Το παρακάτω παράδειγμα επεξηγεί πως να διαβάσουμε τις παραμέτρους που μεταδίδονται από την JavaScript, καθώς και πώς να γίνει επιστροφή του αποτελέσματος:

```cpp
// addon.cc
#include <node.h>

namespace demo {

using v8::Exception;
using v8::FunctionCallbackInfo;
using v8::Isolate;
using v8::Local;
using v8::Number;
using v8::Object;
using v8::String;
using v8::Value;

// Αυτή είναι η υλοποίηση της μεθόδου add
// Οι παράμετροι εισόδου μεταδίδονται με τη χρήση του
// const FunctionCallbackInfo<Value>& args struct
void Add(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  // Έλεγχος του αριθμού παραμέτρων που μεταδόθηκαν.
  if (args.Length() < 2) {
    // Εμφάνιση ενός Σφάλματος που επιστρέφεται στην JavaScript
    isolate->ThrowException(Exception::TypeError(
        String::NewFromUtf8(isolate, "Wrong number of arguments")));
    return;
  }

  // Έλεγχος του τύπου των παραμέτρων
  if (!args[0]->IsNumber() || !args[1]->IsNumber()) {
    isolate->ThrowException(Exception::TypeError(
        String::NewFromUtf8(isolate, "Wrong arguments")));
    return;
  }

  // Εκτέλεση της πράξης
  double value = args[0]->NumberValue() + args[1]->NumberValue();
  Local<Number> num = Number::New(isolate, value);

  // Ορισμός της τιμής επιστροφής (με τη χρήση της μεταδιδόμενης 
  // FunctionCallbackInfo<Value>&)
  args.GetReturnValue().Set(num);
}

void Init(Local<Object> exports) {
  NODE_SET_METHOD(exports, "add", Add);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, Init)

}  // namespace demo
```

Όταν μεταγλωττιστεί, το παράδειγμα Πρόσθετου μπορεί να χρησιμοποιηθεί εντός της Node.js:

```js
// test.js
const addon = require('./build/Release/addon');

console.log('This should be eight:', addon.add(3, 5));
```


### Callback

Είναι συνηθισμένη τακτική των Πρόσθετων να γίνεται μετάδοση των συναρτήσεων της JavaScript σε μια συνάρτηση C++ και να γίνεται εκεί η εκτέλεσή τους. Το παρακάτω παράδειγμα επεξηγεί πώς να γίνει ένα τέτοιο callback:

```cpp
// addon.cc
#include <node.h>

namespace demo {

using v8::Function;
using v8::FunctionCallbackInfo;
using v8::Isolate;
using v8::Local;
using v8::Null;
using v8::Object;
using v8::String;
using v8::Value;

void RunCallback(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();
  Local<Function> cb = Local<Function>::Cast(args[0]);
  const unsigned argc = 1;
  Local<Value> argv[argc] = { String::NewFromUtf8(isolate, "hello world") };
  cb->Call(Null(isolate), argc, argv);
}

void Init(Local<Object> exports, Local<Object> module) {
  NODE_SET_METHOD(module, "exports", RunCallback);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, Init)

}  // namespace demo
```

Σημειώστε ότι αυτό το παράδειγμα χρησιμοποιεί μια μορφή της `Init()` με δύο παραμέτρους, που λαμβάνει ένα πλήρες αντικείμενο `module` ως δεύτερη παράμετρο. Αυτό επιτρέπει την πλήρη αντικατάσταση των `exports` από τα Πρόσθετα, με τη χρήση μιας και μοναδικής συνάρτησης, αντί να προστίθεται η συνάρτηση ως ιδιότητα των `exports`.

Για να το δοκιμάσετε, εκτελέστε τον παρακάτω κώδικα JavaScript:

```js
// test.js
const addon = require('./build/Release/addon');

addon((msg) => {
  console.log(msg);
// Τυπώνει: 'hello world'
});
```

Σημειώστε πως, σε αυτό το παράδειγμα, η συνάρτηση callback καλείται συγχρονισμένα.

### Εργοστάσιο Αντικειμένων

Τα Πρόσθετα μπορούν να δημιουργούν και να επιστρέφουν νέα αντικείμενα, εντός μιας συνάρτησης C++, όπως επεξηγείται στο παρακάτω παράδειγμα. Ένα αντικείμενο δημιουργείται και επιστρέφεται με την ιδιότητα `msg`, που τυπώνει το string που μεταδόθηκε στο `createObject()`:

```cpp
// addon.cc
#include <node.h>

namespace demo {

using v8::FunctionCallbackInfo;
using v8::Isolate;
using v8::Local;
using v8::Object;
using v8::String;
using v8::Value;

void CreateObject(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  Local<Object> obj = Object::New(isolate);
  obj->Set(String::NewFromUtf8(isolate, "msg"), args[0]->ToString());

  args.GetReturnValue().Set(obj);
}

void Init(Local<Object> exports, Local<Object> module) {
  NODE_SET_METHOD(module, "exports", CreateObject);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, Init)

}  // namespace demo
```

Για να το δοκιμάσετε στη JavaScript:

```js
// test.js
const addon = require('./build/Release/addon');

const obj1 = addon('hello');
const obj2 = addon('world');
console.log(obj1.msg, obj2.msg);
// Τυπώνει: 'hello world'
```


### Εργοστάσιο Συναρτήσεων

Ένα άλλο συνηθισμένο σενάριο είναι η δημιουργία συναρτήσεων JavaScript που εσωκλείουν συναρτήσεις C++ και τις επιστρέφουν στην JavaScript:

```cpp
// addon.cc
#include <node.h>

namespace demo {

using v8::Function;
using v8::FunctionCallbackInfo;
using v8::FunctionTemplate;
using v8::Isolate;
using v8::Local;
using v8::Object;
using v8::String;
using v8::Value;

void MyFunction(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();
  args.GetReturnValue().Set(String::NewFromUtf8(isolate, "hello world"));
}

void CreateFunction(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  Local<FunctionTemplate> tpl = FunctionTemplate::New(isolate, MyFunction);
  Local<Function> fn = tpl->GetFunction();

  // παραλείψτε αυτό για να γίνει ανώνυμο
  fn->SetName(String::NewFromUtf8(isolate, "theFunction"));

  args.GetReturnValue().Set(fn);
}

void Init(Local<Object> exports, Local<Object> module) {
  NODE_SET_METHOD(module, "exports", CreateFunction);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, Init)

}  // namespace demo
```

Για δοκιμή:

```js
// test.js
const addon = require('./build/Release/addon');

const fn = addon();
console.log(fn());
// Τυπώνει: 'hello world'
```


### Εγκλεισμός Αντικειμένων C++

Είναι επίσης δυνατό να εσωκλείσετε αντικείμενα/κλάσεις C++ με τρόπο που επιτρέπει τη δημιουργία νέων στιγμιοτύπων με τη χρήση του χειριστή JavaScript `new`:

```cpp
// addon.cc
#include <node.h>
#include "myobject.h"

namespace demo {

using v8::Local;
using v8::Object;

void InitAll(Local<Object> exports) {
  MyObject::Init(exports);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, InitAll)

}  // namespace demo
```

Έτσι, μέσα στο αρχείο `myobject.h`, η κλάση εγκλεισμού κληρονομεί από το `node::ObjectWrap`:

```cpp
// myobject.h
#ifndef MYOBJECT_H
#define MYOBJECT_H

#include <node.h>
#include <node_object_wrap.h>

namespace demo {

class MyObject : public node::ObjectWrap {
 public:
  static void Init(v8::Local<v8::Object> exports);

 private:
  explicit MyObject(double value = 0);
  ~MyObject();

  static void New(const v8::FunctionCallbackInfo<v8::Value>& args);
  static void PlusOne(const v8::FunctionCallbackInfo<v8::Value>& args);
  static v8::Persistent<v8::Function> constructor;
  double value_;
};

}  // namespace demo

#endif
```

Στο αρχείο `myobject.cc`, γίνεται υλοποίηση των μεθόδων που θέλουμε να εκθέσουμε. Στο παρακάτω παράδειγμα, η μέθοδος `plusOne()` εκτίθεται προσθέτοντάς την στο πρωτότυπο του constructor:

```cpp
// myobject.cc
#include "myobject.h"

namespace demo {

using v8::Context;
using v8::Function;
using v8::FunctionCallbackInfo;
using v8::FunctionTemplate;
using v8::Isolate;
using v8::Local;
using v8::Number;
using v8::Object;
using v8::Persistent;
using v8::String;
using v8::Value;

Persistent<Function> MyObject::constructor;

MyObject::MyObject(double value) : value_(value) {
}

MyObject::~MyObject() {
}

void MyObject::Init(Local<Object> exports) {
  Isolate* isolate = exports->GetIsolate();

  // Προετοιμασία πρότυπου constructor
  Local<FunctionTemplate> tpl = FunctionTemplate::New(isolate, New);
  tpl->SetClassName(String::NewFromUtf8(isolate, "MyObject"));
  tpl->InstanceTemplate()->SetInternalFieldCount(1);

  // Πρωτότυπο
  NODE_SET_PROTOTYPE_METHOD(tpl, "plusOne", PlusOne);

  constructor.Reset(isolate, tpl->GetFunction());
  exports->Set(String::NewFromUtf8(isolate, "MyObject"),
               tpl->GetFunction());
}

void MyObject::New(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  if (args.IsConstructCall()) {
    // Καλείται ως constructor: `new MyObject(...)`
    double value = args[0]->IsUndefined() ? 0 : args[0]->NumberValue();
    MyObject* obj = new MyObject(value);
    obj->Wrap(args.This());
    args.GetReturnValue().Set(args.This());
  } else {
    // Καλείται ως απλή συνάρτηση`MyObject(...)`, που μετατρέπεται σε κλήση construct.
    const int argc = 1;
    Local<Value> argv[argc] = { args[0] };
    Local<Context> context = isolate->GetCurrentContext();
    Local<Function> cons = Local<Function>::New(isolate, constructor);
    Local<Object> result =
        cons->NewInstance(context, argc, argv).ToLocalChecked();
    args.GetReturnValue().Set(result);
  }
}

void MyObject::PlusOne(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  MyObject* obj = ObjectWrap::Unwrap<MyObject>(args.Holder());
  obj->value_ += 1;

  args.GetReturnValue().Set(Number::New(isolate, obj->value_));
}

}  // namespace demo
```

Για να μεταγλωττίσετε αυτό το παράδειγμα, το αρχείο `myobject.cc` πρέπει να προστεθεί στο αρχείο `binding.gyp`:

```json
{
  "targets": [
    {
      "target_name": "addon",
      "sources": [
        "addon.cc",
        "myobject.cc"
      ]
    }
  ]
}
```

Δοκιμάστε το με τον παρακάτω κώδικα:

```js
// test.js
const addon = require('./build/Release/addon');

const obj = new addon.MyObject(10);
console.log(obj.plusOne());
// Τυπώνει: 11
console.log(obj.plusOne());
// Τυπώνει: 12
console.log(obj.plusOne());
// Τυπώνει: 13
```

### Εργοστάσιο Εσώκλειστων Αντικειμένων

Εναλλακτικά, είναι πιθανό να χρησιμοποιήσετε ένα υπόδειγμα εργοστασίου για να αποφύγετε την ρητή δημιουργία στιγμιότυπου αντικειμένων με την χρήση του χειριστή JavaScript `new`:

```js
const obj = addon.createObject();
// Αντί για:
// const obj = new addon.Object();
```

Πρώτα, υλοποιείται η μέθοδος `createObject()` στο αρχείο `addon.cc`:

```cpp
// addon.cc
#include <node.h>
#include "myobject.h"

namespace demo {

using v8::FunctionCallbackInfo;
using v8::Isolate;
using v8::Local;
using v8::Object;
using v8::String;
using v8::Value;

void CreateObject(const FunctionCallbackInfo<Value>& args) {
  MyObject::NewInstance(args);
}

void InitAll(Local<Object> exports, Local<Object> module) {
  MyObject::Init(exports->GetIsolate());

  NODE_SET_METHOD(module, "exports", CreateObject);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, InitAll)

}  // namespace demo
```

Στο αρχείο `myobject.h`, προστίθεται η στατική μέθοδος `NewInstance()` για τον χειρισμό της δημιουργίας στιγμιότυπου του αντικειμένου. Αυτή η μέθοδος αντικαθιστά την χρήση του χειριστή `new` στην JavaScript:

```cpp
// myobject.h
#ifndef MYOBJECT_H
#define MYOBJECT_H

#include <node.h>
#include <node_object_wrap.h>

namespace demo {

class MyObject : public node::ObjectWrap {
 public:
  static void Init(v8::Isolate* isolate);
  static void NewInstance(const v8::FunctionCallbackInfo<v8::Value>& args);

 private:
  explicit MyObject(double value = 0);
  ~MyObject();

  static void New(const v8::FunctionCallbackInfo<v8::Value>& args);
  static void PlusOne(const v8::FunctionCallbackInfo<v8::Value>& args);
  static v8::Persistent<v8::Function> constructor;
  double value_;
};

}  // namespace demo

#endif
```

Η υλοποίηση στο αρχείο `myobject.cc` είναι παρόμοια με το προηγούμενο παράδειγμα:

```cpp
// myobject.cc
#include <node.h>
#include "myobject.h"

namespace demo {

using v8::Context;
using v8::Function;
using v8::FunctionCallbackInfo;
using v8::FunctionTemplate;
using v8::Isolate;
using v8::Local;
using v8::Number;
using v8::Object;
using v8::Persistent;
using v8::String;
using v8::Value;

Persistent<Function> MyObject::constructor;

MyObject::MyObject(double value) : value_(value) {
}

MyObject::~MyObject() {
}

void MyObject::Init(Isolate* isolate) {
  // Προετοιμασία πρότυπου constructor
  Local<FunctionTemplate> tpl = FunctionTemplate::New(isolate, New);
  tpl->SetClassName(String::NewFromUtf8(isolate, "MyObject"));
  tpl->InstanceTemplate()->SetInternalFieldCount(1);

  // Πρωτότυπο
  NODE_SET_PROTOTYPE_METHOD(tpl, "plusOne", PlusOne);

  constructor.Reset(isolate, tpl->GetFunction());
}

void MyObject::New(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  if (args.IsConstructCall()) {
    // Καλείται ως constructor: `new MyObject(...)`
    double value = args[0]->IsUndefined() ? 0 : args[0]->NumberValue();
    MyObject* obj = new MyObject(value);
    obj->Wrap(args.This());
    args.GetReturnValue().Set(args.This());
  } else {
    // Καλείται ως απλή συνάρτηση `MyObject(...)`, που μετατρέπεται σε κλήση construct.
    const int argc = 1;
    Local<Value> argv[argc] = { args[0] };
    Local<Function> cons = Local<Function>::New(isolate, constructor);
    Local<Context> context = isolate->GetCurrentContext();
    Local<Object> instance =
        cons->NewInstance(context, argc, argv).ToLocalChecked();
    args.GetReturnValue().Set(instance);
  }
}

void MyObject::NewInstance(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  const unsigned argc = 1;
  Local<Value> argv[argc] = { args[0] };
  Local<Function> cons = Local<Function>::New(isolate, constructor);
  Local<Context> context = isolate->GetCurrentContext();
  Local<Object> instance =
      cons->NewInstance(context, argc, argv).ToLocalChecked();

  args.GetReturnValue().Set(instance);
}

void MyObject::PlusOne(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  MyObject* obj = ObjectWrap::Unwrap<MyObject>(args.Holder());
  obj->value_ += 1;

  args.GetReturnValue().Set(Number::New(isolate, obj->value_));
}

}  // namespace demo
```

Για άλλη μια φορά, για να μεταγλωττίσετε αυτό το παράδειγμα, το αρχείο `myobject.cc` πρέπει να προστεθεί στο αρχείο `binding.gyp`:

```json
{
  "targets": [
    {
      "target_name": "addon",
      "sources": [
        "addon.cc",
        "myobject.cc"
      ]
    }
  ]
}
```

Δοκιμάστε το με τον παρακάτω κώδικα:

```js
// test.js
const createObject = require('./build/Release/addon');

const obj = createObject(10);
console.log(obj.plusOne());
// Τυπώνει: 11
console.log(obj.plusOne());
// Τυπώνει: 12
console.log(obj.plusOne());
// Τυπώνει: 13

const obj2 = createObject(20);
console.log(obj2.plusOne());
// Τυπώνει: 21
console.log(obj2.plusOne());
// Τυπώνει: 22
console.log(obj2.plusOne());
// Τυπώνει: 23
```


### Μετάδοση των εσώκλειστων αντικειμένων

Επιπρόσθετα του εγκλεισμού και της επιστροφής αντικειμένων C++, είναι δυνατό να γίνεται μετάδοση αντικειμένων με την αφαίρεσή τους από τον εγκλεισμό, με τη χρήση της βοηθητικής συνάρτησης της Node.js `node::ObjectWrap::Unwrap`. Τα παρακάτω παραδείγματα δείχνουν μια συνάρτηση `add()` που μπορεί να πάρει σαν παραμέτρους εισόδου δύο αντικείμενα `MyObject`:

```cpp
// addon.cc
#include <node.h>
#include <node_object_wrap.h>
#include "myobject.h"

namespace demo {

using v8::FunctionCallbackInfo;
using v8::Isolate;
using v8::Local;
using v8::Number;
using v8::Object;
using v8::String;
using v8::Value;

void CreateObject(const FunctionCallbackInfo<Value>& args) {
  MyObject::NewInstance(args);
}

void Add(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  MyObject* obj1 = node::ObjectWrap::Unwrap<MyObject>(
      args[0]->ToObject());
  MyObject* obj2 = node::ObjectWrap::Unwrap<MyObject>(
      args[1]->ToObject());

  double sum = obj1->value() + obj2->value();
  args.GetReturnValue().Set(Number::New(isolate, sum));
}

void InitAll(Local<Object> exports) {
  MyObject::Init(exports->GetIsolate());

  NODE_SET_METHOD(exports, "createObject", CreateObject);
  NODE_SET_METHOD(exports, "add", Add);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, InitAll)

}  // namespace demo
```

Στο αρχείο `myobject.h`, μια δημόσια μέθοδος προστίθεται, για να επιτρέψει την πρόσβαση σε ιδιωτικές τιμές μετά την αφαίρεση του αντικειμένου από τον εγκλεισμό του.

```cpp
// myobject.h
#ifndef MYOBJECT_H
#define MYOBJECT_H

#include <node.h>
#include <node_object_wrap.h>

namespace demo {

class MyObject : public node::ObjectWrap {
 public:
  static void Init(v8::Isolate* isolate);
  static void NewInstance(const v8::FunctionCallbackInfo<v8::Value>& args);
  inline double value() const { return value_; }

 private:
  explicit MyObject(double value = 0);
  ~MyObject();

  static void New(const v8::FunctionCallbackInfo<v8::Value>& args);
  static v8::Persistent<v8::Function> constructor;
  double value_;
};

}  // namespace demo

#endif
```

Η υλοποίηση του αρχείου `myobject.cc` είναι παρόμοια με πριν:

```cpp
// myobject.cc
#include <node.h>
#include "myobject.h"

namespace demo {

using v8::Context;
using v8::Function;
using v8::FunctionCallbackInfo;
using v8::FunctionTemplate;
using v8::Isolate;
using v8::Local;
using v8::Object;
using v8::Persistent;
using v8::String;
using v8::Value;

Persistent<Function> MyObject::constructor;

MyObject::MyObject(double value) : value_(value) {
}

MyObject::~MyObject() {
}

void MyObject::Init(Isolate* isolate) {
  // Προετοιμασία προτύπου constructor
  Local<FunctionTemplate> tpl = FunctionTemplate::New(isolate, New);
  tpl->SetClassName(String::NewFromUtf8(isolate, "MyObject"));
  tpl->InstanceTemplate()->SetInternalFieldCount(1);

  constructor.Reset(isolate, tpl->GetFunction());
}

void MyObject::New(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  if (args.IsConstructCall()) {
    // Καλείται ως constructor: `new MyObject(...)`
    double value = args[0]->IsUndefined() ? 0 : args[0]->NumberValue();
    MyObject* obj = new MyObject(value);
    obj->Wrap(args.This());
    args.GetReturnValue().Set(args.This());
  } else {
    // Καλείται ως απλή συνάρτηση`MyObject(...)`, που μετατρέπεται σε κλήση construct.
    const int argc = 1;
    Local<Value> argv[argc] = { args[0] };
    Local<Context> context = isolate->GetCurrentContext();
    Local<Function> cons = Local<Function>::New(isolate, constructor);
    Local<Object> instance =
        cons->NewInstance(context, argc, argv).ToLocalChecked();
    args.GetReturnValue().Set(instance);
  }
}

void MyObject::NewInstance(const FunctionCallbackInfo<Value>& args) {
  Isolate* isolate = args.GetIsolate();

  const unsigned argc = 1;
  Local<Value> argv[argc] = { args[0] };
  Local<Function> cons = Local<Function>::New(isolate, constructor);
  Local<Context> context = isolate->GetCurrentContext();
  Local<Object> instance =
      cons->NewInstance(context, argc, argv).ToLocalChecked();

  args.GetReturnValue().Set(instance);
}

}  // namespace demo
```

Δοκιμάστε το με τον παρακάτω κώδικα:

```js
// test.js
const addon = require('./build/Release/addon');

const obj1 = addon.createObject(10);
const obj2 = addon.createObject(20);
const result = addon.add(obj1, obj2);

console.log(result);
// Τυπώνει: 30
```

### AtExit hooks

An "AtExit" hook is a function that is invoked after the Node.js event loop has ended but before the JavaScript VM is terminated and Node.js shuts down. "AtExit" hooks are registered using the `node::AtExit` API.

#### void AtExit(callback, args)

* `callback` {void (\*)(void\*)} A pointer to the function to call at exit.
* `args` {void\*} A pointer to pass to the callback at exit.

Καταχωρεί hook εξόδου, που εκτελούνται αφού ολοκληρωθεί ο βρόχος συμβάντων, αλλά πριν τον τερματισμό της εικονικής μηχανής.

Η συνάρτηση AtExit δέχεται δύο παραμέτρους: έναν δείκτη προς μια συνάρτηση callback που θα τρέξει κατά την έξοδο, και έναν δείκτη προς δεδομένα χωρίς τύπο που μεταδίδονται στο προαναφερόμενο callback.

Τα callback εκτελούνται με σειρά Last-in First-out.

The following `addon.cc` implements AtExit:

```cpp
// addon.cc
#include <assert.h>
#include <stdlib.h>
#include <node.h>

namespace demo {

using node::AtExit;
using v8::HandleScope;
using v8::Isolate;
using v8::Local;
using v8::Object;

static char cookie[] = "yum yum";
static int at_exit_cb1_called = 0;
static int at_exit_cb2_called = 0;

static void at_exit_cb1(void* arg) {
  Isolate* isolate = static_cast<Isolate*>(arg);
  HandleScope scope(isolate);
  Local<Object> obj = Object::New(isolate);
  assert(!obj.IsEmpty());  // assert VM is still alive
  assert(obj->IsObject());
  at_exit_cb1_called++;
}

static void at_exit_cb2(void* arg) {
  assert(arg == static_cast<void*>(cookie));
  at_exit_cb2_called++;
}

static void sanity_check(void*) {
  assert(at_exit_cb1_called == 1);
  assert(at_exit_cb2_called == 2);
}

void init(Local<Object> exports) {
  AtExit(at_exit_cb2, cookie);
  AtExit(at_exit_cb2, cookie);
  AtExit(at_exit_cb1, exports->GetIsolate());
  AtExit(sanity_check);
}

NODE_MODULE(NODE_GYP_MODULE_NAME, init)

}  // namespace demo
```

Δοκιμάστε το στην JavaScript εκτελώντας:

```js
// test.js
require('./build/Release/addon');
```
